k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: student-registration-gateway
  namespace: student-app

  annotations:
    networking.gke.io/certmap: pe3-private-gke-cert-map

spec:
  gatewayClassName: gke-l7-global-external-managed

  addresses:
    - type: NamedAddress
      value: pe3-teja-student-trn-ip

  listeners:
    - name: https
      protocol: HTTPS
      port: 443

      allowedRoutes:
        namespaces:
          from: Same
