k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: student-registration-route
  namespace: student-app
spec:
  parentRefs:
    - name: student-registration-gateway
      sectionName: https

  hostnames:
    - "test1.deltaintech.co.in"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /

      backendRefs:
        - name: student-registration-service
          port: 80
